add http utility

--- a/software/kterm-extra/package.toml
+++ b/software/kterm-extra/package.toml
@@ -1,6 +1,7 @@
 [main]
 name = "kterminal/extra"
-version = "1.0.0"
+version = "1.0.1"
 files = [
-    '/xxd.py'
+    '/xxd.py',
+    '/http_get.py'
 ]
